# V-Bot3

./: .deepsource.toml  .flake8  .gitignore  README.md  app.json  credentials.json  main.py  pyproject.toml  requirements.txt  token.json
.github/: FUNDING.yml  README.md
resources/: README.md  abilities.json  ability.py  dex_physical.json  dex_special.json  dex_species.json  dex_status.json  dex_types.json  faq.json  faq.json5  final.json5  hub_partners.json  mon_typing.py  move.py  movepool.py  moves.json  shadow_moves.json  species.json  species.py  templates.json  templates.json5  test copy.py  test.py  types.json
src/: README.md
src/cogs/: README.md  submission.py
src/cogs/ai/: __init__.py
src/cogs/bumps/: README.md  __init__.py  bumps.py  cog.py
src/cogs/cosmic/: __init__.py
src/cogs/debug/: README.md  __init__.py
src/cogs/embed_builder/: README.md  __init__.py  builder_modals.py  cog.py
src/cogs/information/: README.md  __init__.py  area_selection.py  cog.py  information_view.py  perks.py  poll.py  roles.py
src/cogs/inviter/: README.md  __init__.py  classifier.py  cog.py
src/cogs/moderation/: README.md  __init__.py  appeals.py  cog.py
src/cogs/pokedex/: README.md  __init__.py  cog.py  search.py
src/cogs/proxy/: README.md  __init__.py  cog.py  proxy.py
src/cogs/reminder/: README.md  __init__.py
src/cogs/roles/: README.md  __init__.py  area_selection.py  cog.py  roles.py
src/cogs/rp_search/: cog.py  roles.py
src/cogs/submission/: README.md  __init__.py  area_selection.py  cog.py  oc_modification.py  oc_parsers.py  oc_submission.py  submission_view.py  unused.py
src/cogs/utilities/: README.md  __init__.py  cog.py  sphinx_reader.py
src/cogs/wiki/: README.md  __init__.py  wiki.py  wiki_complex.py
src/context/: README.md  __init__.py  context.py
src/enums/: README.md  __init__.py  abilities.py  mon_types.py  moves.py  pronouns.py  stats.py
src/exceptions/: README.md  __init__.py  character.py
src/pagination/: README.md  __init__.py  boolean.py  complex.py  simple.py  text_input.py  view_base.py  wiki.py
src/resources/: README.md  faq.json  final.json
src/structures/: README.md  __init__.py  ability.py  bot.py  character.py  converters.py  exceptions.py  help.py  inventory.py  logger.py  mission.py  mon_typing.py  move.py  movepool.py  pokeball.py  pronouns.py  proxy.py  species.py  transformer.py  weather.py
src/structures/character/: __init__.py  character.py  character_creation.py  fakemon_character.py  fusion_character.py  legendary_character.py  mega_character.py  mythical_character.py  pokemon_character.py  ultrabeast_character.py
src/tests/: README.md  test.py
src/utils/: README.md  __init__.py  autocomplete.py  converters.py  doc_reader.py  etc.py  functions.py  imagekit.py  matches.py
src/views/: README.md  __init__.py  ability_view.py  characters_view.py  image_view.py  message_view.py  mission_view.py  move_view.py  movepool_view.py  oc_modification.py  rp_view.py  size_view.py  species_view.py  stats_view.py  submission_view.py
