[tool.poetry]
name = "v-bot3"
version = "3"
description = ""
authors = ["Vioshim <krangelj@unicartagena.edu.co>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "speed",
    "voice",
] }
jishaku = "^2.5.1"
uvloop = { version = "^0.16.0", platform = "linux" }
frozendict = "^2.3.4"
rapidfuzz = "^2.6.0"
dateparser = "^1.1.1"
motor = { extras = ["srv"], version = "^3.0.0" }
colour = "^0.1.5"
pyaml = "^21.10.1"
apscheduler = { git = "https://github.com/agronholm/apscheduler.git", rev = "master" }
beautifulsoup4 = "^4.11.1"
python-docx = "^0.8.11"
d20 = "^1.1.2"
asyncpg = "^0.26.0"
mystbin-py = "^5.0.2"
aiogoogle = { git = "https://github.com/omarryhan/aiogoogle.git", rev = "master" }
humanize = "^4.3.0"
python-dotenv = "^0.20.0"
pymongo = { extras = ["srv"], version = "^4.2.0" }
chronological = "^0.1.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
motor-stubs = "^1.7.1"
black = { version = "^22.8.0", allow-prereleases = true }
isort = { version = "^5.10.1", extras = [
    "requirements_deprecated_finder",
    "pipfile_deprecated_finder",
] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

line-length = 120 # override black's default line-length
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | .vscode
  | .history
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMethod = "basic"
pythonVersion = "3.10.7"
flake8 = "^4.0.1"


[tool.isort]
# make it compatible with black
profile = "black"
