[tool.poetry]
name = "v-bot3"
version = "3"
description = ""
authors = ["Vioshim <krangelj@unicartagena.edu.co>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "speed",
    "voice",
] }
jishaku = "^2.5.2"
uvloop = { version = "^0.19.0", platform = "linux" }
frozendict = "^2.3.10"
rapidfuzz = "^3.5.2"
motor = { extras = ["srv"], version = "^3.3.2" }
colour = "^0.1.5"
pyaml = "^23.9.7"
apscheduler = { git = "https://github.com/agronholm/apscheduler.git", rev = "master" }
beautifulsoup4 = "^4.12.2"
python-docx = "^1.1.0"
d20 = "^1.1.2"
mystbin-py = "^6.0.2"
humanize = "^4.9.0"
python-dotenv = "^1.0.0"
pymongo = { extras = ["srv"], version = "^4.6.1" }
chronological = "^0.1.1"
aiogoogle = { git = "https://github.com/omarryhan/aiogoogle.git", rev = "master" }
dateparser = "^1.2.0"
pluralkit = "^1.1.5"
webcolors = "^1.13"
titlecase = "^2.4.1"
reportlab = "^4.0.8"
discord-ext-i18n = {git = "https://github.com/Vioshim/discord-ext-i18n"}
novelai = {git = "https://github.com/Vioshim/NovelAI-API.git"}


[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
motor-stubs = "^1.7.1"
black = { version = "^24.1a1", allow-prereleases = true }
isort = { version = "^5.13.1", extras = [
    "requirements_deprecated_finder",
    "pipfile_deprecated_finder",
] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

line-length = 120 # override black's default line-length
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | .vscode
  | .history
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMethod = "basic"
pythonVersion = "3.12"
flake8 = "^4.0.1"


[tool.isort]
# make it compatible with black
profile = "black"
